--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 
 * {
   box-sizing: border-box;
+  transition: all, 0.4s;
 }
 
 body {
@@ -11,11 +12,21 @@ body {
   font-family: 'Baloo Tammudu 2', 'Noto Sans KR', sans-serif;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 #reset {
   position: fixed;
   top: 20px;
   left: 20px;
-  cursor: pointer;
+  border: none;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: rgb(80, 80, 80);
+  font-size: 1rem;
+  font-weight: 600;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
+  outline: none;
 }
 
 #bgImage {
@@ -123,12 +134,6 @@ body {
   transition: all, 0.4s;
 }
 
-@media (max-width: 1200px) {
-  #todo-form input {
-    width: 80%;
-  }
-}
-
 #todo-form input:hover {
   background-color: rgba(255, 255, 255, 0.4);
 }
@@ -170,6 +175,7 @@ body {
 
 #todo-list li:hover {
   color: rgb(141, 186, 198);
+  transition: all, 0.1s;
 }
 
 #todo-list button {
@@ -184,7 +190,6 @@ body {
 }
 
 #todo-list button:hover {
-  cursor: pointer;
   background-color: rgba(255, 255, 255, 0.4);
   transition: all, 0.4s;
 }
@@ -216,4 +221,22 @@ body {
   color: white;
   font-size: 0.9rem;
   font-weight: 700;
+}
+
+@media (max-width: 1100px) {
+  #clock {
+    font-size: 1em;
+  }
+
+  #todo-form input {
+    width: 80%;
+  }
+
+  #todo-list li {
+    width: 21em;
+  }
+
+  #todo-list li span {
+    width: 18em;
+  }
 }
